# gluxi-hacks

./: .gitignore  .hgignore  .hgsigs  CMakeLists.txt  glooxbot.ini  gluxi.cfg  in.vim  mysql.sql  out.vim  pgsql.sql  vimproject
cmake/: hgversion.sh  plugins.cmake
misc/: Makefile  webstatus.c
sql/: config.sql  mysql.sql  pgsql.sql
sql/update/: dbupdate.cfg  dbupdate.sh
sql/update/mysql/: 00310.sql  00334.sql  00352.sql
sql/update/old/: mysql_update.sql
sql/update/pgsql/: 00310.sql  00334.sql  00352.sql  00374.sql  00380.sql  00387.sql  00396.sql  00401.sql
sqlconvert/: main.cpp  sqlconvert.pro  tmp.sql
src/: CMakeLists.txt
src/base/: CMakeLists.txt  asyncrequest.cpp  asyncrequest.h  asyncrequestlist.cpp  asyncrequestlist.h  baseplugin.cpp  baseplugin.h  common.cpp  common.h  datastorage.cpp  datastorage.h  dbversion.h  glooxbot.cpp  glooxbot.h  glooxwrapper.cpp  glooxwrapper.h  gluxi_version.h  gluxibot.cpp  gluxibot.h  logger.cpp  logger.h  main.cpp  messageparser.cpp  messageparser.h  mystanza.cpp  mystanza.h  pluginlist.cpp  pluginlist.h  pluginloader.h  pluginref.cpp  pluginref.h  rolelist.cpp  rolelist.h  segfault.c  segfault.h  vcardwrapper.cpp  vcardwrapper.h
src/base/config/: abstractconfigurator.cpp  abstractconfigurator.h  configfield.cpp  configfield.h  configupdateobserver.cpp  configupdateobserver.h  sqlbasedconfigurator.cpp  sqlbasedconfigurator.h  storagekey.cpp  storagekey.h
src/base/disco/: discohandler.cpp  discohandler.h  featureitem.cpp  featureitem.h  identityitem.cpp  identityitem.h  infoitem.cpp  infoitem.h  rootdiscohandler.cpp  rootdiscohandler.h
src/base/gloox/: myvcardhandler.h  myvcardmanager.cpp  myvcardmanager.h
src/plugins/: CMakeLists.txt
src/plugins/acl/: CMakeLists.txt  acllist.cpp  acllist.h  aclplugin.cpp  aclplugin.h
src/plugins/admin/: CMakeLists.txt  adminplugin.cpp  adminplugin.h
src/plugins/alias/: CMakeLists.txt  alias.cpp  alias.h  aliaslist.cpp  aliaslist.h  aliasplugin.cpp  aliasplugin.h
src/plugins/config/: CMakeLists.txt  configplugin.cpp  configplugin.h
src/plugins/core/: CMakeLists.txt  coreplugin.cpp  coreplugin.h
src/plugins/misc/: CMakeLists.txt  bcrequest.cpp  bcrequest.h  miscplugin.cpp  miscplugin.h
src/plugins/muc/: CMakeLists.txt  actiontype.h  alist.cpp  alist.h  alistitem.cpp  alistitem.h  cleanasyncrequest.cpp  cleanasyncrequest.h  conference.cpp  conference.h  conferencelist.cpp  conferencelist.h  jid.cpp  jid.h  jidstat.cpp  jidstat.h  jidtimestat.cpp  jidtimestat.h  muchistory.cpp  muchistory.h  mucplugin.cpp  mucplugin.h  nick.cpp  nick.h  nickasyncrequest.cpp  nickasyncrequest.h  nicklist.cpp  nicklist.h  offsendlist.cpp  offsendlist.h
src/plugins/muc/config/: mucconfigurator.cpp  mucconfigurator.h
src/plugins/net/: CMakeLists.txt  currencyrequest.cpp  currencyrequest.h  googlerequest.cpp  googlerequest.h  netplugin.cpp  netplugin.h  nslookuprequest.cpp  nslookuprequest.h  pingrequest.cpp  pingrequest.h  rp5request.cpp  rp5request.h  rssrequest.cpp  rssrequest.h  svnrequest.cpp  svnrequest.h  tracerouterequest.cpp  tracerouterequest.h  translaterequest.cpp  translaterequest.h  weatherrequest.cpp  weatherrequest.h  wwwrequest.cpp  wwwrequest.h  xeprequest.cpp  xeprequest.h
src/plugins/net/gismeteo/: weatherrequest.cpp  weatherrequest.h
src/plugins/roster/: CMakeLists.txt  rosterplugin.cpp  rosterplugin.h  rosterstorage.cpp  rosterstorage.h
src/plugins/user/: CMakeLists.txt  image2ascii.cpp  image2ascii.h  userplugin.cpp  userplugin.h
src/plugins/webstatus/: CMakeLists.txt  webstatusplugin.cpp  webstatusplugin.h  webstatusthread.cpp  webstatusthread.h
src/plugins/word/: CMakeLists.txt  wordlist.cpp  wordlist.h  wordplugin.cpp  wordplugin.h
src/proxy/: CMakeLists.txt  baseproxy.cpp  baseproxy.h  directproxy.cpp  directproxy.h
src/socketw/: CMakeLists.txt
src/socketw/src/: sw_inet.cxx  sw_ssl.cxx
