PROJECT(gluxi)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4.0)

SET(CMAKE_COLOR_MAKEFILE ON)
SET(CMAKE_USE_RELATIVE_PATHS OFF)
SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
OPTION(DEBUG "Generate debug info" OFF)

SET (LIB_SEARCH
	/usr/lib
	/usr/local/lib
)

SET (INC_SEARCH
	/usr/include
	/usr/local/include
)


# Find Qt4
SET (QT_DONT_USE_QTGUI TRUE)
SET (QT_USE_QTSQL TRUE)
SET (QT_USE_QTNETWORK TRUE)
FIND_PACKAGE(Qt4 REQUIRED)

INCLUDE(${QT_USE_FILE})

# Find libgloox library
FIND_LIBRARY(LIBGLOOX_LIB NAMES gloox PATHS ${LIB_SEARCH})
FIND_PATH(LIBGLOOX_INC gloox/gloox.h ${INC_SEARCH})

INCLUDE_DIRECTORIES(
	${INCLUDE_DIRECTORIES}
	${QT_INCLUDE_DIR}
	${QT_QTSQL_INCLUDE_DIR}
	${LIBGLOOX_INC}
)

IF (DEBUG)
	SET(CMAKE_BUILD_TYPE debug)
ENDIF(DEBUG)

ADD_SUBDIRECTORY(src)

